# secretbro

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  rustfmt.toml
.cargo/: config.toml
docs/superpowers/specs/: 2026-05-08-remove-redhook-dependency-design.md
src/: hook.rs  lib.rs
tests/: macos_interpose.rs  preload.rs
