[package]
name = "secretbro"
version = "0.6.0"
authors = ["Dinko Korunic <dinko.korunic@gmail.com>"]
categories = ["command-line-utilities"]
description = "library for the filesystem access control for Kubernetes secrets directory"
repository = "https://github.com/dkorunic/secretbro"
homepage = "https://github.com/dkorunic/secretbro"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]
edition = "2021"
rust-version = "1.81.0"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
libc = "0.2.186"

[lints.rust]
future-incompatible = { level = "warn", priority = -3 }
rust-2018-idioms = { level = "warn", priority = -2 }
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
redundant_clone = "deny"

[profile.release]
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = "abort"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
